--- a/views/index.erb
+++ b/views/index.erb
@@ -2,12 +2,12 @@
 <div id="studentblock">
 
   <div id="student">
-    <p>First Name: <%= student.first_name() %> </p>
-    <p>Last Name: <%= student.last_name() %> </p>
-    <p>House: <%= student.house() %> </p>
-    <p>Age: <%= student.age() %> </p>
+    <p>First Name: <%= student.first_name %> </p>
+    <p>Last Name: <%= student.last_name %> </p>
+    <p>House: <%= student.house %> </p>
+    <p>Age: <%= student.age %> </p>
     <p><a href="/students/<%= student.id %>">Show Student</a></p>
-    <p><a href="/students/<%= student.id %>/edit">Edit Student</a></p>
+    <!-- <p><a href="/students/<%= student.id %>/edit">Edit Student</a></p> -->
     <p><a href="/students/<%= student.id %>/delete">Delete Student</a></p>
   </div>
 
