--- a/views/new.erb
+++ b/views/new.erb
@@ -1,16 +1,15 @@
 <form action="/students" method="POST">
-  <label for="firstName">First Name:</label>
-  <input type="text" name="first_name" id="firstName">
-  <label for="lastName">Last Name:</label>
-  <input type="text" name="last_name" id="lastName">
-  <label for="house">Select a house:</label>
-  <select name="house" id="house>">
-    <option value="Gryfinndor">Gryfinndor</option>
-    <option value="Hufflepuff">Hufflepuff</option>
-    <option value="Slytherin">Slytherin</option>
-    <option value="Ravenclaw">Ravenclaw</option>
-  </select>
-  <label for="age">Age:</label>
-  <input type="number" name="age" id="age">
-  <input type="submit" value="Submit">
+   <label for="firstName">First Name:</label>
+   <input type="text" name="first_name" id="firstName">
+   <label for="lastName">Last Name:</label>
+   <input type="text" name="last_name" id="lastName">
+   <label for="house">Select a house:</label>
+   <select name="house_id" id="house>">
+   <% @houses.each do |ahouse|%>
+     <option id ="housebox" value="<%= ahouse.id %>"><%= ahouse.name %></option>
+     <% end %>
+   </select>
+   <label for="age">Age:</label>
+   <input type="number" name="age" id="age">
+   <input type="submit" value="Submit">
 </form>
