--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,18 +6,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hogwarts Student Tracker</title>
   <link rel="stylesheet" href="/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
 </head>
 <body>
 <header>
-  <h1>Hogwarts Student Tracker</h1>
+<div id="left-align">
+   <nav>
+     <ul>
+      <li><a href="/students">HOME</a></li>
+      <li><a href="/students/new">NEW STUDENT</a></li>
+     </ul>
+   </nav>
+  <h1>Student Enrollment System</h1>
+    <h2>Hogwarts School of Witchcraft and Wizardry</h2>
+</div>
+    <img class="emblem" src="/hogwarts_logo.png" alt="Hogwarts Emblem">
 </header>
-  <nav>
-    <ul>
-      <li><a href="/students">Home</a></li>
-      <li><a href="/students/new">New Student</a></li>
-    </ul>
-  </nav>
+
   <div id="content">
     <%= yield %>
   </div>
