Basic CSS Added

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,8 @@
   <title>Hogwarts Student Tracker</title>
   <link rel="stylesheet" href="/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
+
 
 </head>
 <body>
@@ -25,6 +27,9 @@
 </header>
 
   <div id="content">
+     <a href="/students/new"><div id="create-new">
+        ADD STUDENT
+     </div></a>
     <%= yield %>
   </div>
 </body>
