--- a/views/show.erb
+++ b/views/show.erb
@@ -1,3 +1,6 @@
+
+<div id="studentblock">
+
 <p>First Name: <%= @student.first_name() %> </p>
 <p>Last Name: <%= @student.last_name() %> </p>
 <p>House: <%= @student.house() %> </p>
@@ -5,3 +8,4 @@
 <form class="" action="/students/<%= @student.id %>/delete" method="post">
   <input type="submit" name="" value="Delete">
 </form>
+</div>
