--- a/public/styles.css
+++ b/public/styles.css
@@ -18,33 +18,69 @@ li {
 }
 
 header {
-   background: linear-gradient(0deg, #fff, #19426b);
+   background: linear-gradient(0deg, #2E826A, #2E826A);
    opacity: 0.8;
-   padding: 5px;
+   padding: 10px;
    display: flex;
    justify-content: space-between;
+   margin-bottom: 30px;
 }
 
 nav {
 
 }
+h1 {
+   color: #fff;
+   font-size: 18px;
+   margin-top: 35px;
+}
+
+h2 {
+   font-family: 'Dancing Script', cursive;
+   font-size: 16px;
+   color: #fff;
+}
 
 img.emblem {
-   height: 100px;
+   height: 120px;
    z-index: 2;
-   margin-top: 20px;}
+   margin: 10px 20px 0px 0px;}
 
 #content {
-   padding: 10px 40px 10px 40px;
+   padding: 10px 80px 10px 80px;
+}
+
+#create-new {
+   height: 40px;
+   width: 180px;
+   background-color: #e9cd37;
+   margin-left: auto;
+   margin-right: auto;
+   margin-bottom: 40px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   border-radius: 7px;
+   font-weight: bold;
+   font-size: 14px;
 
 }
 
 #studentblock {
-   background-color: #1e7922;
+   background-image: url(https://images-na.ssl-images-amazon.com/images/I/41GxEBcDmfL._SY355_.jpg);
    opacity: 0.7;
-   padding: 10px;
+   padding: 10px 20px 10px 40px;
    margin: 10px;
 }
+
+#studentblock a {
+   color: #000;
+   font-weight: bold;}
+
+#studentblock:hover {
+   opacity: 0.4;
+}
+
 body {
    margin: 0;
 }
